# ai-clip

./: .env.example  .gitignore  Makefile  README.md  config.example.toml  pyproject.toml  requirements.txt  setup_hooks.sh
hooks/: pre-commit
src/ai_clip/: __init__.py  __main__.py  ai_client.py  cli.py  clipboard.py  config.py  history.py  hotkeys.py  orchestrator.py  picker.py  sound.py
tests/: conftest.py
tests/unit/: test_ai_client.py  test_cli.py  test_clipboard.py  test_config.py  test_history.py  test_hotkeys.py  test_orchestrator.py  test_picker.py  test_sound.py
