[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-clip"
version = "0.1.0"
description = "AI-powered clipboard text transformer for Linux"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "python-dotenv",
    "tomli",
    "tomli-w",
]

[project.scripts]
ai-clip = "ai_clip.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH", "PLR"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004"]

[tool.ruff.lint.pylint]
max-statements = 30
max-branches = 10
max-args = 6

[tool.coverage.run]
source = ["ai_clip"]
omit = ["src/ai_clip/__main__.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov --cov-report=term-missing --cov-fail-under=95"
